cambio en la posicion del navbar, ajustes responsivos y eliminación jQuery

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,53 @@
+/* Colors Fondo #F9F8F8 MenuSelected #89023E NavBar #EAE6E5 Fuente primaria #12130F*/
+/* Fuentes
+Principal font-family: 'DM Sans', sans-serif;
+Secundaria font-family: 'Playfair Display', serif;
+ */
+/* RESET CSS */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,25 +57,35 @@ html {
     scroll-behavior: smooth;
 }
 
-nav {
-    background-color: black;
-    width: 100%;
-    height: 40px;
+body {
+    background-color: #F9F8F8;
+    color: #12130F;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.containerNavBar .navBar {
+    display: none;
+}
+
+header .navBarMobile {
+    background-color: #EAE6E5;
     position: fixed;
-    padding-bottom: 20px;
+    width: 100%;
+    top: 0;
+    height: 60px;
 }
 
-
-
-.itemMenu {
-    display: none;
+/*flex brand */
+header .navBarMobile .brand {
+    display: inline-block;
+    position: absolute;
+    left: 2px;
+    top: 2px;
 }
 
-.itemMenuFooter {
-    display: none;
+header .navBarMobile .brand img {
+    width: 120px;
 }
-/*flex brand y menu toggle*/
-
 
 /*Menu toggle*/
 #toggle {
@@ -33,18 +93,16 @@ nav {
     height: 30px;
     margin-left: auto;
     padding: 12px;
-    background-color: black;
-    
-    
+    background-color: #EAE6E5;
 }
 
 #toggle div {
     width: 100%;
     height: 5px;
-    background: white;
+    background: #12130F;
     margin: 4px auto;
     transition: all 0.3s ease-in-out;
-    backface-visibility:hidden;
+    backface-visibility: hidden;
     z-index: 9999;
     position: sticky;
 }
@@ -60,103 +118,183 @@ nav {
 #toggle.on .three {
     transform: rotate(-45deg) translate(7px, -8px);
 }
+
+.itemMenuFooter {
+    display: none;
+}
+
 /* estilos MENÚ CELULAR*/
 
-#menu {
-    background-color:rgba(0, 0,0, 0.3);
-    color: white;
+
+header .navBarMobile .menuCelu {
+    background-color: #EAE6E5;
+
     width: 100%;
-    height: 50vh;
+    height: 70vh;
     padding: 10px;
-    font-family: sans-serif;
-    line-height: 100px;
+
+    line-height: 70px;
     text-align: left;
+
     margin: auto;
     display: none;
     z-index: 99999;
+
 }
 
-.menuCelu {
-    display: flex;
-    flex-direction: column;
-    position:sticky;
-        
-}
-
-.itemMenuCelu {
+header .navBarMobile .menuCelu .itemMenuCelu {
+    font-family: 'Playfair Display', serif;
     text-decoration: none;
-    font-size: 20px;
-    color: white;
+    font-size: 18px;
+    color: #12130F;
 }
 
-.itemMenuCelu:hover {
+header .navBarMobile .menuCelu .itemMenuCelu:hover {
     color: grey;
-    font-size: 22px;
-    transition: 0.2s ease-in-out;
+    border-bottom: 2px solid #89023E;
+    transition: 0.4s ease-in-out;
 }
 
+header .navBarMobile .menuCelu .socialMedia {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: end;
+}
+
+header .navBarMobile .menuCelu .socialMedia a {
+    color: #12130F;
+    text-decoration: none;
+}
+
+header .navBarMobile .menuCelu .socialMedia a:hover {
+    font-size: 20px;
+    transition: .3s ease-in-out;
+}
 
 section {
     height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 50px;
+    color: #BBB5BD;
 }
 
+main {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 50px;
+    color: #BBB5BD;
+}
+
+main img {
+    max-width: 100%; /* La imagen no superará el ancho del contenedor */
+    height: auto; /* La altura se ajustará automáticamente para mantener la proporción original */
+}
 .seccionPrimera {
-    background-color: red;
+    background-color: #909CC2;
+
 }
 
 .seccionSegunda {
-    background-color: blueviolet;
+    background-color: #478978;
 }
 
 .seccionTercera {
-    background-color: yellow;
+    background-color: #F58A07;
 }
 
 .seccionCuarta {
-    background-color: green;
+    background-color: #DA4167;
 }
 
 .seccionQuinta {
-    background-color: orange;
+    background-color: #083D77;
 }
 
-@media only screen and (min-width: 768px) {
-    #toggle {
-        display: none;
-    }
-    .brandCelu {
+/* Entre 992px y 1199px */
+/* Bootstrap breakpoints LG y superiores */
+@media (min-width: 992px) {
+
+    header .navBarMobile {
         display: none;
     }
 
-    nav {
-        background-color: black;
-        height: 40px;
-        text-align: center;
+    /* Estilo inicial de .containerNavBar */
+    .containerNavBar {
+        position: relative;
+        z-index: 1000;/* Asegura que esté por encima de otros elementos */
+    }
+
+    /* Estilo cuando .containerNavBar está fijo en la parte superior */
+    .containerNavBar.fixed {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        background-color: #F9F8F8;
+        /* Puedes ajustar el color de fondo según tu diseño */
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+        /* Sombra para resaltar */
+        animation: slideDown 0.7s ease; /* Duración, transición y tipo de animación */
+    }
+
+    @keyframes slideDown {
+        from {
+            transform: translateY(-100%);
+        }
+        to {
+            transform: translateY(0);
+        }
+    }
+
+
+    .containerNavBar .navBar {
+        /* organización del contenido */
         display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        position: sticky;
+
+        /* Coloca el navBar en la parte superior de la ventana */
+        width: 100%;
+        z-index: 1000;
+        /* Asegura que esté por encima de otros elementos */
+
+        /* estilos del contenido */
+        background-color: #EAE6E5;
+        height: 50px;
+    }
+
+    .containerNavBar .navBar .itemsNavBar {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
         justify-content: space-evenly;
-        padding-bottom: 20px;
+        align-items: center;
     }
 
-    nav a {
-        padding-top: 20px;
-        padding-bottom: 20px;
+    .containerNavBar .navBar .itemsNavBar .itemMenu {
         text-decoration: none;
-        color: white;
-    }
-
-    .itemMenu {
+        color: #12130F;
         display: inline;
-        font-family: sans-serif;
-        font-size: 20px;
+        font-family: 'Playfair Display', serif;
+        font-size: 18px;
+        position: relative;
     }
 
-    .itemMenuFooter {
-        display: inline;
-    }
-
-    .itemMenu:hover {
+    .containerNavBar .navBar .itemsNavBar .itemMenu:hover {
         color: grey;
-        font-size: 19px;
-        transition: 0.2s;
+        border-bottom: 2px solid #89023E;
+        /* Añade una línea debajo en el estado de hover */
     }
+
 }
